--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <h1>Learning github pages</h1>
 <p>People! Don't laugh. I'm serious at learning this</p>
+<p>Just added an SSH key, going to test it now</p>
