learned to change the url to use passphrases instead of password

--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
 <h1>Learning github pages</h1>
 <p>People! Don't laugh. I'm serious at learning this</p>
 <p>Just added an SSH key, going to test it now</p>
+
+<p><b>Tip:</b> A common mistake is cloning using the default (HTTPS) instead of SSH. You can correct this by going to your repository, clicking the ssh button left to the URL field and updating the URL of your origin remote like this:</p>
+
+<code>git remote set-url origin git@github.com:username/repo.git</code>
