Page title changed and one project link added

--- a/projects/index.html
+++ b/projects/index.html
@@ -1,2 +1,6 @@
-<h1>Welcome</h1>
-<p>Projects will be added soon</p>
+<h1>Projects</h1>
+<ul>
+	<li>
+		<a href="jQuery.html">jQuery</a>
+	</li>
+</ul>
