--- a/projects/jQuery.html
+++ b/projects/jQuery.html
@@ -2,10 +2,31 @@
 <html>
 <head>
 	<title>jQuery project</title>
+	<link rel="stylesheet" href="">
 </head>
 <body>
 	<h1>My Day and Night Site</h1>
-	<button>Day</button>
-	<button>Night</button>
+	<button data-file="day">Day</button>
+	<button data-file="night">Night</button>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script>
+	(function(){
+		var link = $('link');
+		$('button').on('click', function(){
+			var $this = $(this),
+				stylesheet = $this.data('file');
+			
+			link.attr('href', stylesheet +'.css');
+			$this
+				.siblings('button')
+					.removeAttr('disabled')
+					.end()
+					.attr('disabled', 'disabled');
+
+		});
+	})();
+</script>
+
 </body>
 </html>
