--- a/projects/jQuery.html
+++ b/projects/jQuery.html
@@ -3,14 +3,20 @@
 <head>
 	<title>jQuery project</title>
 	<link rel="stylesheet" href="">
+	<style>
+		.kiss{
+			display: none;
+		}
+	</style>
 </head>
 <body>
 	<h1>My Day and Night Site</h1>
 	
 	<button data-file="day">Day</button>
 	<button data-file="night">Night</button>
-	
+
 	<p class="description"></p>
+	<img class="kiss" src="kiss.png" alt="KISS">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>
@@ -18,7 +24,8 @@
 		var link = $('link');
 		$('button').on('click', function(){
 			var $this = $(this),
-				stylesheet = $this.data('file');
+				stylesheet = $this.data('file'),
+				kiss = $('.kiss');
 			
 			link.attr('href', stylesheet +'.css');
 			$this
@@ -26,7 +33,9 @@
 					.removeAttr('disabled')
 					.end()
 					.attr('disabled', 'disabled');
+			kiss.css('display', 'block');
 			$('.description').text('You are now watching the '+ stylesheet + ' theme');
+			kiss.delay(1500).fadeOut();
 		});
 	})();
 </script>
