kiss is now not free

--- a/projects/jQuery.html
+++ b/projects/jQuery.html
@@ -18,7 +18,7 @@
 	</div>
 	<p class="description"></p>
 
-	<button class="chumma">Get a chumma for free!</button>
+	<button class="chumma">Get a chumma</button>
 	<img class="kiss" src="kiss.png" alt="KISS">
 	
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
