CSS3 project added to the list

--- a/projects/index.html
+++ b/projects/index.html
@@ -1,6 +1,7 @@
 <h1>Projects</h1>
 <ul>
 	<li>
-		<a href="jQuery.html">jQuery</a>
+		<a href="/jQuery/">jQuery</a>
+		<a href="/CSS3/">CSS</a>
 	</li>
 </ul>
