fixed  broken links

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	Enter passphrase for /home/elyobo/.ssh/id_rsa: <br>
 	Identity added: /home/elyobo/.ssh/id_rsa (/home/elyobo/.ssh/id_rsa)</code>
 
-	<p>Have a look at my <a href="/projects/" style="text-decoration:none; font-size:1.5em;">project section</a></p>
+	<p>Have a look at my <a href="projects/" style="text-decoration:none; font-size:1.5em;">project section</a></p>
 </body>
 
 </html>
