--- a/projects/index.html
+++ b/projects/index.html
@@ -1,7 +1,9 @@
 <h1>Projects</h1>
 <ul>
 	<li>
-		<a href="/jQuery/">jQuery</a>
-		<a href="/CSS3/">CSS</a>
+		<a href="jQuery/">jQuery</a>
+	</li>
+	<li>
+		<a href="CSS3/">CSS</a>
 	</li>
 </ul>
