slider added to the project list

--- a/projects/index.html
+++ b/projects/index.html
@@ -1,9 +1,6 @@
 <h1>Projects</h1>
 <ul>
-	<li>
-		<a href="jQuery/">jQuery</a>
-	</li>
-	<li>
-		<a href="CSS3/">CSS3 Animations</a>
-	</li>
+	<li><a href="jQuery/">jQuery kiss</a></li>
+	<li><a href="CSS3/">CSS3 Animations</a></li>
+	<li><a href="Slider/">jQuery Slider</a></li>
 </ul>
