changed svg background

--- a/demo/svg.html
+++ b/demo/svg.html
@@ -1,4 +1,4 @@
-<svg width="640" height="480" xmlns="http://www.w3.org/2000/svg">
+<svg width="1280" height="720" xmlns="http://www.w3.org/2000/svg">
  <defs>
   <radialGradient spreadMethod="pad" id="svg_1">
    <stop offset="0" stop-color="#FF0000"/>
@@ -24,70 +24,9 @@
    <stop offset="0" stop-opacity="0.98828" stop-color="#c6e557"/>
    <stop offset="1" stop-opacity="0.99219" stop-color="#ffffa5"/>
   </radialGradient>
-  <radialGradient fy="0.25" fx="0.30731" r="0.5" cy="0.29297" cx="0.53387" spreadMethod="pad" id="svg_4">
-   <stop offset="0" stop-opacity="0.98828" stop-color="#ce2f84"/>
-   <stop offset="1" stop-opacity="0.98828" stop-color="#ffa5fa"/>
-  </radialGradient>
-  <radialGradient fy="0" fx="0" r="0.5" cy="0" cx="0" spreadMethod="pad" id="svg_8">
-   <stop offset="0" stop-opacity="0.98438" stop-color="#e256e0"/>
-   <stop offset="1" stop-opacity="0.98828" stop-color="#ffbcff"/>
-  </radialGradient>
-  <radialGradient id="svg_9" spreadMethod="pad" cx="0.53387" cy="0.29297" r="0.5" fx="0.30731" fy="0.25">
-   <stop stop-color="#ce2f84" stop-opacity="0.98828" offset="0"/>
-   <stop stop-color="#ffa5fa" stop-opacity="0.98828" offset="1"/>
-  </radialGradient>
-  <radialGradient fy="0.25" fx="0.30731" r="0.5" cy="0.29297" cx="0.53387" spreadMethod="pad" id="svg_12">
-   <stop offset="0" stop-opacity="0.98828" stop-color="#ce2f84"/>
-   <stop offset="1" stop-opacity="0.98828" stop-color="#ffa5fa"/>
-  </radialGradient>
-  <radialGradient fy="0" fx="0" r="0.5" cy="0.16016" cx="0.18622" spreadMethod="pad" id="svg_13">
-   <stop offset="0" stop-opacity="0.98047" stop-color="#e057d7"/>
-   <stop offset="1" stop-opacity="0" stop-color="#000000"/>
-  </radialGradient>
-  <radialGradient fy="0" fx="0" r="0.5" cy="0.16016" cx="0.18622" spreadMethod="pad" id="svg_14">
-   <stop offset="0" stop-opacity="0.97656" stop-color="#e076d9"/>
-   <stop offset="1" stop-opacity="0" stop-color="#000000"/>
-  </radialGradient>
-  <radialGradient fy="0.54297" fx="0.45966" r="0.5" cy="0.61328" cx="0.31122" spreadMethod="pad" id="svg_15">
-   <stop offset="0.15497" stop-opacity="0.97656" stop-color="#e076d9"/>
-   <stop offset="0.54559" stop-opacity="0" stop-color="#000000"/>
-  </radialGradient>
-  <radialGradient fy="0.54297" fx="0.45966" r="0.5" cy="0.54297" cx="0.45184" spreadMethod="pad" id="svg_16">
-   <stop offset="0.46747" stop-opacity="0.97266" stop-color="#ff96f8"/>
-   <stop offset="0.59637" stop-opacity="0" stop-color="#000000"/>
-  </radialGradient>
-  <radialGradient fy="0.52734" fx="0.487" r="0.5" cy="0.54297" cx="0.45184" spreadMethod="pad" id="svg_17">
-   <stop offset="0.46747" stop-opacity="0.97266" stop-color="#ff96f8"/>
-   <stop offset="0.59637" stop-opacity="0.99609" stop-color="#fc83ee"/>
-  </radialGradient>
-  <radialGradient fy="0.25" fx="0.30731" r="0.5" cy="0.29297" cx="0.53387" spreadMethod="pad" id="svg_18">
-   <stop offset="0" stop-opacity="0.98828" stop-color="#ce2f84"/>
-   <stop offset="1" stop-opacity="0.98438" stop-color="#ffa5fa"/>
-  </radialGradient>
-  <radialGradient fy="0.74219" fx="0.25653" r="0.5" cy="0.98047" cx="0.16669" spreadMethod="pad" id="svg_19">
-   <stop offset="0" stop-opacity="0.96875" stop-color="#ff68f4"/>
-   <stop offset="1" stop-opacity="0.99219" stop-color="#ffa5fa"/>
-  </radialGradient>
-  <radialGradient fy="0.86328" fx="0.16278" r="0.5" cy="0.92969" cx="0.08075" spreadMethod="pad" id="svg_20">
-   <stop offset="0.09637" stop-opacity="0.99609" stop-color="#fc83ee"/>
-   <stop offset="1" stop-opacity="0.97266" stop-color="#ff96f8"/>
-  </radialGradient>
-  <radialGradient fy="0.25" fx="0.30731" r="0.5" cy="0.29297" cx="0.53387" spreadMethod="pad" id="svg_21">
-   <stop offset="0" stop-opacity="0.98828" stop-color="#ce2f84"/>
-   <stop offset="1" stop-opacity="0.98047" stop-color="#ffa5fa"/>
-  </radialGradient>
-  <radialGradient fy="0.86328" fx="0.16278" r="0.5" cy="0.92969" cx="0.08075" spreadMethod="pad" id="svg_22">
-   <stop offset="0.09637" stop-opacity="0.99609" stop-color="#fc83ee"/>
-   <stop offset="1" stop-opacity="0.96484" stop-color="#ffb5fa"/>
-  </radialGradient>
-  <radialGradient fy="0.86328" fx="0.16278" r="0.5" cy="0.92969" cx="0.08075" spreadMethod="pad" id="svg_23">
-   <stop offset="0.09637" stop-opacity="0.99609" stop-color="#fc83ee"/>
-   <stop offset="1" stop-opacity="0.96094" stop-color="#ffa5fa"/>
-  </radialGradient>
  </defs>
  <g>
-  <title>Complex SVG Gradient</title>
-  <rect id="svg_3" height="370" width="557" y="57" x="33" opacity="0.95" fill="url(#svg_21)"/>
-  <rect id="svg_7" height="93" width="98.99999" y="333" x="36" opacity="0.95" fill="url(#svg_23)"/>
+  <title>Layer 1</title>
+  <rect id="svg_3" height="720" width="1280" y="57" x="33" opacity="0.95" stroke-linecap="null" stroke-linejoin="null" fill="url(#svg_6)"/>
  </g>
 </svg>
