Duck Duck Fly added

--- a/projects/index.html
+++ b/projects/index.html
@@ -3,4 +3,5 @@
 	<li><a href="jQuery/">jQuery kiss</a></li>
 	<li><a href="CSS3/">CSS3 Animations</a></li>
 	<li><a href="Slider/">jQuery Slider</a></li>
+	<li><a href="Duck%20Duck%20Fly/">2D game - Duck Duck Fly</a></li>
 </ul>
