--- a/personal-test-projects/index.html
+++ b/personal-test-projects/index.html
@@ -1,4 +1,4 @@
-<h1>Projects</h1>
+<h1>Test Projects</h1>
 <ul>
 	<li><a href="jQuery/">jQuery kiss</a></li>
 	<li><a href="CSS3/">CSS3 Animations</a></li>
