--- a/personal-test-projects/Connect2Rep/vendors.html
+++ b/personal-test-projects/Connect2Rep/vendors.html
@@ -54,11 +54,14 @@
 
 										<header>
 											<h2>Vendors</h2>
-											<p>Semper amet scelerisque metus faucibus morbi congue mattis</p>
+											<!-- <p>Semper amet scelerisque metus faucibus morbi congue mattis</p>
 											<ul class="meta">
 												<li class="icon fa-clock-o">5 days ago</li>
 												<li class="icon fa-comments"><a href="#">1,024</a></li>
-											</ul>
+											</ul> -->
+											<div class="video-container">
+												<iframe width="1280" height="720" src="https://www.youtube.com/embed/D6AtpKUrCUA?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+											</div>
 										</header>
 
 										<section>
