sign in sign up link added to footer

--- a/personal-test-projects/Connect2Rep/services.html
+++ b/personal-test-projects/Connect2Rep/services.html
@@ -125,6 +125,16 @@
 
 					</div>
 				</div>
+
+				<div class="row 200%">
+					<div class="12u">
+						<div class="footer-sign-in">
+							<a class="nav-sign-in" href="javascript://">Members Sign In</a>
+							<a class="nav-join" href="javascript://">Join for free</a>
+						</div>
+					</div>
+				</div>				
+
 				<div class="row 200%">
 					<div class="12u">
 
