--- a/personal-test-projects/Connect2Rep/about.html
+++ b/personal-test-projects/Connect2Rep/about.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Home - Connect2Rep</title>
+		<title>About Us - Connect2Rep</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
