--- a/personal-test-projects/Connect2Rep/contact.html
+++ b/personal-test-projects/Connect2Rep/contact.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Home - Connect2Rep</title>
+		<title>Contact Us - Connect2Rep</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -45,7 +45,27 @@
 		
 		<!-- Main -->
 			<div id="main-wrapper">
-				
+				<div id="main" class="container">
+					<div class="row 200%">
+						<div class="12u">
+							<div class="content">
+								<article class="box page-content">
+									<header>
+										<h2>Contact Us</h2>
+
+										<form class="contact-form">
+											<input type="text" placeholder="Name">
+											<input type="email" placeholder="Email">
+											<input type="text" placeholder="Phone">
+											<textarea name="" id="" placeholder="Enter your message"></textarea>
+											<input type="submit" value="Send">
+										</form>
+									</header>
+								</article>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 
 		<!-- Footer -->
