--- a/personal-test-projects/Connect2Rep/services.html
+++ b/personal-test-projects/Connect2Rep/services.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Vendors - Connect2Rep</title>
+		<title>Services - Connect2Rep</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
