--- a/personal-test-projects/Connect2Rep/contact.html
+++ b/personal-test-projects/Connect2Rep/contact.html
@@ -54,8 +54,13 @@
 										<h2>Contact Us</h2>
 
 										<form class="contact-form">
-											<input type="text" placeholder="Name">
+											<input type="text" placeholder="First Name">
+											<input type="text" placeholder="Last Name">
 											<input type="email" placeholder="Email">
+
+											<input type="text" placeholder="Company/Organization">
+											<input type="text" placeholder="Occupation">
+											
 											<input type="text" placeholder="Phone">
 											<textarea name="" id="" placeholder="Enter your message"></textarea>
 											<input type="submit" value="Send">
